  * XPath (like) navegation:
     ** The implementation of XmlStorage::Select allows using:
        *** XmlStorage::AppendToDocument(object, path, filename)
        *** XmlStorage::RestoreFromFragment(object, path, istream)
        *** Using atomic primitives for doing some similar hacks like writing
            fragments of the XML for an object to disk.
     ** This solves issue #0000045

2004-11-18 CLAM_0_7_0
'Easier deployment, better plots and Processing Networks'
  * Processing Ports Infrastructure Complete Rewrite:
     ** Now effectively works with any datatype (i.e. InPort<Spectrum>)
     ** Shortcut CLAM::ConnectPorts with either ports numbers and names
     ** Shortcut CLAM::ConnectControls with either control numbers and names
     ** Underlying data structure for streaming tokens is specified using a 
        Template-Policy
        *** Default policy is PhantomBuffer: an contiguous-memory circular 
            buffer with some nice feature
        *** But also usable any STL container
     ** Internal (implementation) classes hierarchie has been simplified a 
        lot.
     ** Thoroughly (unit) tested, and stress tested
     ** Stream class now can be policy-templatized to PhantomBuffer or any 
        STL container
     ** New ports-linking schema : only out->in (and not out->data or 
        in->data)
        *** Ports Attach(ProcessingData&) method has been deprecated.
        *** Please refer to the migration guide and doxygen docs
     ** New AudioIn/OutPorts. Similar tor In/OutPort<TData> but with richer 
        interface
     ** New feature: In/OutPortPublisher 
        *** A composite port that "publishes" one or more inner ports.
        *** When linking a port with a publisher it acts like a mediator for 
            its published ports.
     ** New In/OutPort public interface
        *** Constructors. Now gets only two parameters, and not the window 
            size anymore